defined nodejs v10 to be installed

--- a/wallofshame/.ebextensions/install-node.config
+++ b/wallofshame/.ebextensions/install-node.config
@@ -30,6 +30,7 @@ files:
       #
       #  curl --silent --location https://rpm.nodesource.com/setup_4.x | bash -
       #  curl --silent --location https://rpm.nodesource.com/setup_6.x | bash -
+        curl --silent --location https://rpm.nodesource.com/setup_10.x | bash -
 
   "/tmp/install_node.sh" :
     mode: "000755"
